--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,25 @@
 services:
-  # frontend:
-  #   build: 
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - ./frontend:/workspace
-  #   tty: true
-  #   ports:
-  #     - "3001:3000"
+  frontend:
+    build: 
+      context: ./frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ./frontend:/workspace
+    tty: true
+    ports:
+      - "3001:3000"
 
-  # backend:
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
-  #   volumes:
-  #     - ./backend:/workspace
-  #   depends_on:
-  #     - db
-  #   tty: true
-  #   ports:
-  #   - "3000:3000"
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    volumes:
+      - ./backend:/workspace
+    depends_on:
+      - db
+    tty: true
+    ports:
+    - "3000:3000"
   
   db:
     image: mysql:latest
@@ -32,5 +32,5 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - db-data:/var/lib/mysql
+      - ./db-data:/var/lib/mysql
     
